Fixed Gradient styling to shift with pin movement. And made label's move with the pins not fixing issue.

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -20,6 +20,7 @@
         margin: 6px;
         & .slider-pin{
             top: -8px;
+            left: -5px;
             transform: translateX(--left, 0px);
             position: absolute;
             width: 10px;
